--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: ZMK Build:Direct Shield Inclusion (Final Attempt)
+name: ZMK Build:Direct Configuration (Bypassing Shield System)
 
 on:
   push:
@@ -22,7 +22,7 @@ jobs:
         with:
           fetch-depth: 0 
           
-      - name: ⚙️ West Setup and Configuration
+      - name: ⚙️ West Setup and Direct File Configuration
         shell: bash
         run: |
           # --- Configuration Variables ---
@@ -31,10 +31,9 @@ jobs:
           ZMK_ROOT="$GITHUB_WORKSPACE/zmk_workspace"
           CUSTOM_CONFIG_DIR="$GITHUB_WORKSPACE/config" 
           BOARD_NAME="nice_nano_v2"
-          SHIELD_NAME="mediapad"
-          SHIELD_DIR="$ZMK_ROOT/app/boards/shields/$SHIELD_NAME"
           
           # 1. Initialize and Update West Workspace
+          echo "--- 1. Setting up West Workspace ---"
           git clone --branch "$ZMK_REVISION" https://github.com/zmkfirmware/zmk.git "$ZMK_CLONE_DIR" || exit 1
           mkdir -p "$ZMK_ROOT"
           west init -m "$ZMK_CLONE_DIR" --mr "$ZMK_REVISION" --mf app/west.yml "$ZMK_ROOT" || exit 1
@@ -42,37 +41,36 @@ jobs:
           west update || exit 1
           
           # 2. Prepare Application Source
+          echo "--- 2. Preparing Application Source and Configuration ---"
           mkdir -p "$ZMK_ROOT/app"
           cp -r "$ZMK_ROOT/app_clone/app/"* "$ZMK_ROOT/app" || exit 1
           
-          # 3. Create Shield Directory and Copy/Patch Files
-          echo "--- Setting up Shield Configuration and Applying Fixes ---"
-          mkdir -p "$SHIELD_DIR"
+          # 3. Copy/Patch Files DIRECTLY to Application Root
+          echo "--- 3. Copying Files to App Root for Direct Discovery ---"
           
-          # Copy Keymap, Overlay, and create config file
-          cp "$CUSTOM_CONFIG_DIR/mediapad3.keymap" "$SHIELD_DIR/$SHIELD_NAME.keymap" || { echo "FATAL: Keymap file missing."; exit 1; }
-          cp "$CUSTOM_CONFIG_DIR/$BOARD_NAME.overlay" "$SHIELD_DIR/$SHIELD_NAME.overlay" || { echo "FATAL: Overlay file missing."; exit 1; }
-          echo "CONFIG_ZMK_KEYMAP_NAME=\"$SHIELD_NAME\"" > "$SHIELD_DIR/$SHIELD_NAME.conf"
+          # Keymap: Must be renamed to BOARD_NAME.keymap
+          KEYMAP_DEST="$ZMK_ROOT/app/$BOARD_NAME.keymap"
+          cp "$CUSTOM_CONFIG_DIR/mediapad3.keymap" "$KEYMAP_DEST" || { echo "FATAL: Keymap file missing or failed copy."; exit 1; }
           
-          # Patch the overlay (Critical for C compilation)
-          OVERLAY_DEST="$SHIELD_DIR/$SHIELD_NAME.overlay"
+          # Overlay: Must be named BOARD_NAME.overlay
+          OVERLAY_DEST="$ZMK_ROOT/app/$BOARD_NAME.overlay"
+          cp "$CUSTOM_CONFIG_DIR/$BOARD_NAME.overlay" "$OVERLAY_DEST" || { echo "FATAL: Overlay file missing or failed copy."; exit 1; }
+          
+          # Patch the overlay (Critical for C compilation: rows/columns)
           if ! grep -q "rows" "$OVERLAY_DEST"; then
               echo "Patching overlay with missing rows=<1> and columns=<3> properties..."
               sed -i '/kscan_0:/a \ \ \ \ \ \ \ \ rows = <1>;\n\ \ \ \ \ \ \ \ columns = <3>;' "$OVERLAY_DEST"
           fi
           
-          # 🚀 CRITICAL FIX: Explicitly include the shield directory in the CMake build
-          # We force ZMK/Zephyr to look into our custom boards folder.
-          echo "--- CRITICAL FIX: Forcing Custom Shield Directory Inclusion in CMakeLists.txt ---"
-          # This should force CMake to discover the contents of the shields folder created by the script.
-          echo "add_subdirectory(boards)" >> "$ZMK_ROOT/app/CMakeLists.txt"
-          
           # 4. Source Zephyr Environment
+          echo "--- 4. Sourcing Zephyr Environment Variables ---"
           . "$ZMK_ROOT/zephyr/zephyr-env.sh" || { echo "FATAL: zephyr-env.sh sourcing failed."; exit 1; }
 
           # 5. Build Application
-          echo "--- Starting Final West Build ---"
-          west build -b $BOARD_NAME "$ZMK_ROOT/app" -- -DSHIELD=$SHIELD_NAME || { 
+          echo "--- 5. Starting Final West Build (Without SHIELD) ---"
+          
+          # 🔥 FINAL FIX: No -DSHIELD=mediapad flag
+          west build -b $BOARD_NAME "$ZMK_ROOT/app" || { 
             echo "FATAL: West build failed."
             exit 1
           }
