--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,6 +98,18 @@ jobs:
               grep -A 5 "matrix_transform_0:" "$DTS_FILE"
               echo "--- END DTS VERIFICATION ---"
           fi
+
+          - name: Upload Build Artifacts on Failure
+            uses: actions/upload-artifact@v3
+            if: failure()
+            with:
+            name: build-failure-logs
+            path: |
+             /__w/GeminiMediaPlayer3/GeminiMediaPlayer3/zmk_workspace/build/zephyr/zephyr.dts.pre
+             /__w/GeminiMediaPlayer3/GeminiMediaPlayer3/zmk_workspace/build/zephyr/zephyr.dts.pre
+            # Include other relevant log files if available
+            retention-days: 5
+
           
       - name: ⬆️ Upload Artifacts
         uses: actions/upload-artifact@v4
